5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4381/executions/1633_2920.log
== TEST (2019-04-02 18:29:15) 
-- CODE:
comida=float(input())
bebi=float(input())
suco=float(input())
vf=(comida+suco+bebi)
print(round(vf,2))
-- OUTPUT:
896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:29:18) 
-- CODE:
comida=float(input())
bebi=float(input())
suco=float(input())
vf=(comida+suco+bebi)
print(round(vf,2))
-- EXECUTION TIME:
0.216858
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
896.12
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
390.03
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
226.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:17) 
-- CODE:
s=float(input(gramas))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gramas))
NameError: name 'gramas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:19) 
-- CODE:
s=float(input(gramas))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.195641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    s=float(input(gramas))
NameError: name 'gramas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:19) 
-- CODE:
s=float(input(gramas))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gramas))
NameError: name 'gramas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:21) 
-- CODE:
s=float(input(gramas))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.141184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    s=float(input(gramas))
NameError: name 'gramas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:21) 
-- CODE:
s=float(input(gramas))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gramas))
NameError: name 'gramas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:46) 
-- CODE:
s=float(input(gm))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gm))
NameError: name 'gm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:36:48) 
-- CODE:
s=float(input(gm))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.134733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    s=float(input(gm))
NameError: name 'gm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:48) 
-- CODE:
s=float(input(gm))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gm))
NameError: name 'gm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:49) 
-- CODE:
s=float(input(gm))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gm))
NameError: name 'gm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:50) 
-- CODE:
s=float(input(gm))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gm))
NameError: name 'gm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:50) 
-- CODE:
s=float(input(gm))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gm))
NameError: name 'gm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:50) 
-- CODE:
s=float(input(gm))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gm))
NameError: name 'gm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:08) 
-- CODE:
s=float(input(gramas))
qb=int(input(bebida))
qa=int(input(sobremesa))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input(gramas))
NameError: name 'gramas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:53) 
-- CODE:
s=float(input('gramas'))
qb=int(input('bebida'))
qa=int(input('sobremesa'))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=(s/26,60)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:38:55) 
-- CODE:
s=float(input('gramas'))
qb=int(input('bebida'))
qa=int(input('sobremesa'))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.202266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,60)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:38:56) 
-- CODE:
s=float(input('gramas'))
qb=int(input('bebida'))
qa=int(input('sobremesa'))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.155335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,60)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:56) 
-- CODE:
s=float(input('gramas'))
qb=int(input('bebida'))
qa=int(input('sobremesa'))
t=(s/26,60)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=(s/26,60)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:18) 
-- CODE:
s=float(input('gramas'))
qb=int(input('bebida'))
qa=int(input('sobremesa'))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:39:19) 
-- CODE:
s=float(input('gramas'))
qb=int(input('bebida'))
qa=int(input('sobremesa'))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.156342
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:15) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:16) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.252509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:17) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.167303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:18) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.13429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:18) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.250536
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:18) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.207902
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:29) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:43:16) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:43:28) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26,90)+(qb*3,50)+(qa*3)
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=(s/26,90)+(qb*3,50)+(qa*3)
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:15) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:44:25) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.2122
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
33.31
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
17.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
11.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:40) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:12) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3)
print(round(t,2))
-- EXECUTION TIME:
0.17128
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
33.31
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
17.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
11.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:13) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:14) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:52) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:04) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:05) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:05) 
-- CODE:
s=float(input("gramas"))
qb=int(input("bebida"))
qa=int(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- EXECUTION TIME:
0.200762
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
33.31
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
17.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
gramasbebidasobremesas11.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:38) 
-- CODE:
s=float(input("gramas"))
qb=float(input("bebida"))
qa=float(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:21) 
-- CODE:
s=float(input("gramas"))
qb=float(input("bebida"))
qa=float(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:58) 
-- CODE:
s=float(input("gramas"))
qb=float(input("bebida"))
qa=float(input("sobremesas"))
t=(s/26.90)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:52:20) 
-- CODE:
s=float(input("gramas"))
qb=float(input("bebida"))
qa=float(input("sobremesas"))
t=(s*26.90)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
24105.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:53:14) 
-- CODE:
s=float(input("gramas"))
qb=float(input("bebida"))
qa=float(input("sobremesas"))
t=(s*26.90/1000)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:53:22) 
-- CODE:
s=float(input("gramas"))
qb=float(input("bebida"))
qa=float(input("sobremesas"))
t=(s*26.90/1000)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- EXECUTION TIME:
0.130314
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:49) 
-- CODE:
s=float(input("gramas"))
qb=float(input("bebida"))
qa=float(input("sobremesas"))
t=(s*26.90/1000)+(qb*3.50)+(qa*3.00)
print(round(t,2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
